Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Nov-2009 Louis Landry
 + Added JHtmlSliders
 + Added JHtmlTabs
 ! JPane and child classes has been deprecated in favor of JHtml helpers.
 ! Big thanks to Christophe Demko for his work on this.

20-Nov-2009 Andrew Eddie
 ^ Change XML version tags to 1.6.0.
 # Fixed bug in Tooltip JS code where title attribute not found causes error.
 # Fixed bug when trying to delete a user.

19-Nov-2009 Ron Severdia
^ Restored missing CSS
# Fixed new CSS issues
^ Cleaned up UI and language strings for Global Check-in
- Remove unnecessary markup
^ Update bluestork images
+ New CSS
^ Fix language strings
 
19-Nov-2009 Andrew Eddie
 ^ Refactor JModelList _getStoreId and _populateState implementations.
 ^ Applied [#18759] Bluestork template with a js independent top menu (by Stian Didriksen).

17-Nov-2009 Andrew Eddie
 # Fixed [#18676] Generator meta tag is still 1.5
 # Fixed bug in JUser class.  Initialised groups property to empty array.

14-Nov-2009 Ian MacLennan
# Fixing atomic template to work with short tags on

13-Nov-2009 Ron Severdia
^ Menu Manager UI fixes
# Menu item modal fixes
+ Added missing language strings/keys
+ Added missing User Menu language file
$ More language string fixes


13-Nov-2009 Andrew Eddie
 ^ Fixed inflection on JForm field names:
   - accesslevels -> accesslevel
   - cachehandlers -> cachehandler
   - categories -> category
   - componentlayouts -> componentlayout
   - contentlanguages -> contentlanguage
   - helpsites -> helpsite
   - integers -> integer
   - languages -> language
   - modulelayouts -> modulelayout
   - sessionhandlers -> sessionhandler
   - timezones -> timezone
   - usergroups -> usergroup
 ^ Changed system debug fields to show new field group capabilities.
 ^ Updated plugin XML files from <params> to <fields>